<resources>
    <string name="app_name">Guitar Transposer</string>
    <string-array name="chords">
        <item>A</item>
        <item>A#/Bb</item>
        <item>Am</item>
        <item>A#m</item>
        <item>B</item>
        <item>Bm</item>
        <item>C</item>
        <item>C#/Db</item>
        <item>Cm</item>
        <item>C#m</item>
        <item>D</item>
        <item>D#/Eb</item>
        <item>Dm</item>
        <item>D#m</item>
        <item>E</item>
        <item>Em</item>
        <item>F</item>
        <item>F#/Gb</item>
        <item>Fm</item>
        <item>F#m</item>
        <item>G</item>
        <item>G#/Ab</item>
        <item>Gm</item>
        <item>G#m</item>
    </string-array>

    <string name="title_activity_main_page_v2">MainPageV2</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="guitar_transposer">Guitar Transposer</string>
    <string name="capo">Capo</string>
    <string name="transponse">Transpose</string>
    <string name="toggle">Toggle</string>
    <string name="fret">Fret</string>
    <string name="chord">Chord %1$s</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>
