<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/drawable_bottom_curve">

    <com.binish.guitartransposer.views.CustomTextView
        android:id="@+id/textViewFret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fret"
        app:customTextStyle="bold"
        android:layout_marginStart="5dp"
        android:rotation="-90"
        android:textColor="@color/DarkKhaki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pickerFrom"
        app:layout_constraintBottom_toBottomOf="@id/pickerFrom"
        />

    <com.binish.guitartransposer.views.CustomTextView
        android:id="@+id/textViewFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="12sp"
        app:customTextStyle="bold"
        android:textColor="@color/DarkKhaki"
        app:layout_constraintStart_toStartOf="@id/pickerFrom"
        app:layout_constraintEnd_toEndOf="@id/pickerFrom"
        app:layout_constraintBottom_toTopOf="@id/pickerFrom"
        />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/pickerFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="10dp"
        android:dividerPadding="1dp"
        android:divider="@color/white"
        app:np_orientation="horizontal"
        app:np_textSize="12sp"
        app:np_min="0"
        app:np_max="11"
        app:np_selectedTextSize="14sp"
        app:np_dividerThickness="1dp"
        app:np_dividerColor="@color/gray"
        app:np_lineSpacingMultiplier="2"
        app:np_fadingEdgeStrength="4"
        app:np_textColor="@color/GhostWhite"
        app:np_selectedTextColor="@color/WhiteSmoke"
        app:np_width="140dp"
        app:layout_constraintStart_toEndOf="@id/textViewFret"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.binish.guitartransposer.views.CustomTextView
        android:id="@+id/textViewTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="12sp"
        app:customTextStyle="bold"
        android:textColor="@color/DarkKhaki"
        app:layout_constraintStart_toStartOf="@id/pickerTo"
        app:layout_constraintEnd_toEndOf="@id/pickerTo"
        app:layout_constraintBottom_toTopOf="@id/pickerTo"
        />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/pickerTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dividerPadding="1dp"
        android:layout_marginEnd="10dp"
        android:divider="@color/white"
        app:np_orientation="horizontal"
        app:np_textSize="12sp"
        app:np_min="0"
        app:np_max="11"
        app:np_selectedTextSize="14sp"
        app:np_dividerThickness="1dp"
        app:np_dividerColor="@color/gray"
        app:np_lineSpacingMultiplier="2"
        app:np_fadingEdgeStrength="4"
        app:np_width="140dp"
        app:np_textColor="@color/GhostWhite"
        app:np_selectedTextColor="@color/WhiteSmoke"
        app:layout_constraintTop_toTopOf="@id/pickerFrom"
        app:layout_constraintBottom_toBottomOf="@id/pickerFrom"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>